[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-walrus"
version = "0.1.0"
description = "TuskPoint: a verifiable LangGraph checkpointer backed by Walrus decentralized storage, with semantic recall via MemWal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TuskPoint" }]
keywords = ["langgraph", "checkpointer", "walrus", "memwal", "mcp", "agent-memory"]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
memwal = ["memwal"]
mcp = ["mcp>=1.0.0"]
demo = ["langchain-anthropic>=0.2.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
all = [
    "memwal",
    "mcp>=1.0.0",
    "langchain-anthropic>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/your-org/langgraph-checkpoint-walrus"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_walrus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real Walrus testnet / MemWal staging (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
