[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuskpoint-mcp"
version = "0.1.0"
description = "TuskPoint: a verifiable LangGraph checkpointer backed by Walrus decentralized storage, with semantic recall via MemWal. Drop-in MCP plugin: 'uvx tuskpoint-mcp'."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TuskPoint" }]
keywords = ["langgraph", "checkpointer", "walrus", "memwal", "mcp", "agent-memory"]

dependencies = [
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
tuskpoint-mcp = "langgraph_checkpoint_walrus.mcp_server:main"

[project.optional-dependencies]
memwal = ["memwal"]
demo = ["langchain-anthropic>=0.2.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
all = [
    "memwal",
    "langchain-anthropic>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://tuskpoint.xyz"
Repository = "https://github.com/faithabiodun/tuskpoint"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_walrus"]

# Keep the sdist lean: ship the package, the thin server shim, and project
# metadata only. The repo's diagrams/ (14 MB of PNGs) and web/ tree are not
# part of the distribution and would otherwise bloat the upload.
[tool.hatch.build.targets.sdist]
include = [
    "src/langgraph_checkpoint_walrus",
    "mcp_server",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit real Walrus mainnet / MemWal staging (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]
